<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtViewTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textColor="#8403fc"
        android:textAlignment="center"
        android:fontFamily="sans-serif-condensed-medium"
        android:paddingTop="30dp"
        android:textSize="30dp"
        />
    
    <TextView
        android:id="@+id/txtViewDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:textAlignment="center"
        android:fontFamily="sans-serif-condensed"
        android:paddingTop="10dp"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="90dp">

        <Button
            android:id="@+id/btn_scroll_drinks_button"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:background="#8403fc"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/view_drinks"
            android:textColor="#ffffff"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_search"
            android:layout_width="150dp"
            android:textColor="#8403fc"
            android:fontFamily="sans-serif-condensed-medium"
            android:layout_height="40dp"
            android:text="@string/search"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btn_view_favorite_drinks"
            android:layout_width="150dp"
            android:textColor="#8403fc"
            android:fontFamily="sans-serif-condensed-medium"
            android:layout_height="40dp"
            android:text="@string/view_favorited_drinks"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edit_txt_drink_search"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:hint="@string/search_hint"
            android:textColor="#8403fc"
            android:fontFamily="sans-serif-condensed-medium"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginTop="213dp" />

</LinearLayout>